# api-umbrella

./: .ackrc  .dockerignore  .eastrc  .gitignore  .gitmodules  .jshintrc  .luacheckrc  .mversionrc  .rspec  .rubocop.yml  .ruby-version  .travis.yml  .yardopts  Berksfile  BoxFile  CHANGELOG.md  CMakeLists.txt  Capfile  Cargo.toml  Dockerfile  Dockerfile-beta-deploy  Dockerfile-dev  Dockerfile-dev-build  Dockerfile-opensearch  Dockerfile-postgres  Gemfile  Gruntfile.js  Jenkinsfile  LICENSE  LICENSE.txt  Makefile  Makefile.in  README.md  Rakefile  Taskfile.yml  Thorfile  Vagrantfile  api-umbrella-gatekeeper-0.1.0-1.rockspec  api-umbrella-gatekeeper.gemspec  auth_proxy.rb  (+14 more)
.circleci/: config.yml
.github/: renovate.json5
app/: conf.lua
artifacts/: deployment.vsdx
auth_proxy/: Gemfile  Rakefile  proxymachine_config.rb
chef/: Cheffile  streaming_fix.rb
community/: index.html
conf/: access.lua  api_key_validator.lua  api_matcher.lua  api_settings.lua  api_store.lua  distributed_rate_limit_puller.lua  distributed_rate_limit_pusher.lua  distributed_rate_limit_queue.lua  error_handler.lua  header_filter.lua  health.lua  init.lua  init_worker.lua  ip_validator.lua  load_api_users.lua  load_apis.lua  load_backends.lua  load_config.lua  log_api_backend_proxy.lua  log_initial_proxy.lua  log_utils.lua  nginx.conf  rate_limit.lua  resolve_backend_dns.lua  rewrite_request.lua  rewrite_response.lua  role_validator.lua  state.lua  user_settings.lua  user_store.lua  utils.lua
config/: README.md  application.rb  assets.yml  compass.rb  database.yml  default.json  default.json.example  default.yml  deploy.rb  elasticsearch.yml  elasticsearch.yml.deploy  elasticsearch_template.json  elasticsearch_templates.json  elasticsearch_templates_v1.json  elasticsearch_templates_v1_es2.json  elasticsearch_templates_v1_es2.json.etlua  elasticsearch_templates_v1_es2.json.mustache  elasticsearch_templates_v1_es2x.json  elasticsearch_templates_v1_es5.json  elasticsearch_templates_v1_es5.json.etlua  elasticsearch_templates_v1_es5.json.mustache  elasticsearch_templates_v1_es7.json.etlua  elasticsearch_templates_v1_es7.json.mustache  elasticsearch_templates_v2.json  elasticsearch_templates_v2_es5.json  elasticsearch_templates_v2_es5.json.etlua  elasticsearch_templates_v2_es5.json.mustache  elasticsearch_templates_v2_es7.json.etlua  elasticsearch_templates_v2_es7.json.mustache  environment.rb  eye.rb  mongod.conf.hbs  mongodb.yml  mongoid.yml  mongoid.yml.deploy  mongoid.yml.example  opensearch_templates_v2_es7.json.etlua  opensearch_templates_v3.json.etlua  opensearch_templates_v4.json.etlua  production.json  (+15 more)
db/: audit.sql  grants.sql  pg-audit-json--1.0.0.sql  pg-audit-json--1.0.1.sql  schema.sql  seeds.rb  setup.sql.etlua  setup.sql.mustache
deploy/: Capfile  Gemfile
doc/: Architecture.md  ArchitectureServers.md  ArchitectureSoftware.md  HowToAddWebService.md  HowToConfigureUrlEndpoints.md
docker/: Dockerfile  Dockerfile-bin
docker-ging/: Dockerfile
docs/: GettingStarted.md  Makefile  conf.py  getting-started.md  idp-doc.md  index.html  index.rst
download/: index.html
heka/: es_payload.lua  json_decoder.lua
install/: index.html
javascripts/: all-08595316.js  all-2ae62c60.js  all-5bf21b8f.js  all-6999930c.js  all-992d4073.js  all-c8fb7086.js  all-df29a6aa.js  all-fdbeeae6.js  all.js  anchor-fbb3e9f5.js  bootstrap-3417b015.js  bootstrap-7b515891.js  jquery-1.11.0-39596260.js  jquery-1.11.0-807d49bc.js  jquery-1.11.0-829b12cb.js  jquery-1.11.0-98a7160d.js  jquery.magnific-popup-50331c91.js  jquery.magnific-popup-b1741521.js  main-2b154d86.js  main-63c08645.js  main-664423e5.js  main-d026e201.js  retina-1.1.0-eb159ded.js  swagger-9ae5df56.js
lib/: api-umbrella-gatekeeper.js  api-umbrella-gatekeeper.rb  beanstalk_connect.js  common_validations.rb  config.js  config_builder.js  config_reloader.js  csv_streamer.rb  distributed_rate_limits_sync.js  east_api_umbrella_mongo.js  elasticsearch_config.rb  elasticsearch_connect.js  gatekeeper.js  haproxy_log_listener.js  js_locale_helper.rb  load_logs.rb  log_processor.js  logger.js  logging.js  mongo_connect.js  process_env.js  proxy.js  proxy_logger.js  reload.js  rollbar.js  router.js  router_log_listener.js  supervisor_pid.js  supervisor_signal.js  write_templates.js
locale/: af.po  api-umbrella.pot  ar.po  az.po  be.po  bg.po  bn.po  bs.po  ca.po  cs.po  da.po  de-CH.po  de.po  de_CH.po  el.po  en-GB.po  en_GB.po  es.po  es_419.po  es_MX.po  et.po  fa.po  fi.po  fr-CA.po  fr.po  fr_CA.po  ha.po  he.po  hr.po  hu.po  id.po  ig.po  is.po  it.po  ja.po  ka.po  ko.po  lo-LA.po  lo_LA.po  lt.po  (+33 more)
locales/: en.json
migrations/: 1_log_urls.js  2_url_hierarchy.js  3_elasticsearch_rename_indexes.js
models/: api_request_log.rb
public/: robots.txt
script/: expire_throttle_db  migrate_logs  migrate_users  static_site_deploy
scripts/: detect_system  generate_countries_data  generate_user_agent_data  import_nginx_logs  migrate_logs  migrate_logs_check  replay_logs  reprocess-cloudwatch-logs.lua
source/: index.html.erb
spec/: api_user_spec.rb  connection_handler_spec.rb  gatekeeper_spec.rb  http_response_spec.rb  rack_app_spec.rb  request_handler_spec.rb  request_parser_handler_spec.rb  response_parser_handler_spec.rb  spec_helper.rb
src/: api-umbrella-git-1.rockspec  config.lua  migrations.lua
stylesheets/: all-30386510.css  all-30ecdeba.css  all-62fad5aa.css  all-69056ddf.css  all-74a2bd70.css  all-7ad1be65.css  all-8b470dcc.css  all-92746e79.css  all-c32fdaa4.css  all-df25f67c.css  all-e9b5948d.css  all-eca34f2b.css  all.css  bootstrap-52e67140.css  bootstrap-d8add83e.css  font-awesome-599e274f.css  font-awesome.css  magnific-popup-825bd986.css  magnific-popup-b9589ef2.css  main-2d2cb9c1.css  main-a1352873.css  main-bbe97265.css  main-c2068745.css  main-d53db4e5.css  main-e6039015.css  main-f4b9b07c.css  main-ffab9d05.css  main.css  swagger-f675f165.css  syntax-fb75c6ce.css
tasks/: bootstrap-2.0.2  bootstrap-2.3.0  bootstrap-2.4.0  bootstrap-2.5.0  bootstrap-2.5.1  bootstrap-2.5.2  bootstrap-2.6.0  bootstrap-2.7.0  bootstrap-2.8.0  (+44 more)
(+3718 files in other folders)
